# graphics-sw-examples

./: CMakeLists.txt  LICENSE
glm/: CMakeLists.txt
interpolation/: CMakeLists.txt
interpolation/src/: image.cpp  image.h  main.cpp  sampler.cpp  sampler.h  types.h
rasterization/: CMakeLists.txt
rasterization/src/: box.cpp  box.h  framebuffer.cpp  framebuffer.h  main.cpp  triangle.cpp  triangle.h  vertex.h
ray_tracing/: CMakeLists.txt
ray_tracing/src/: Camera.cpp  Camera.h  Dielectric.cpp  Dielectric.h  Hitable.cpp  Hitable.h  HitableList.cpp  HitableList.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h  Optional.hpp  Pixmap.cpp  Pixmap.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vector.hpp  main.cpp
stb/: CMakeLists.txt
